--- a/Tafel Taferelen/Main.storyboard
+++ b/Tafel Taferelen/Main.storyboard
@@ -77,7 +77,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K2q-fM-u3Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1032.8" y="820.83958020989508"/>
+            <point key="canvasLocation" x="1134" y="276"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -171,7 +171,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="-815"/>
+            <point key="canvasLocation" x="305" y="-585"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="j0L-ye-UgW">
@@ -190,7 +190,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xhz-v0-AaR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1218" y="-585"/>
+            <point key="canvasLocation" x="1135" y="-585"/>
         </scene>
         <!--Sing Up-->
         <scene sceneID="fms-Pb-dfz">
@@ -301,7 +301,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dgW-vF-RMg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="304.80000000000001" y="84.107946026986511"/>
+            <point key="canvasLocation" x="305" y="276"/>
         </scene>
         <!--New Group-->
         <scene sceneID="sVb-dQ-CNu">
@@ -351,7 +351,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="74"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ug8-RU-ano" id="cqy-UA-Uyt">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="73"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="74"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l74-MN-6sR">
@@ -419,12 +419,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i33-0u-dYr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1069.5999999999999" y="-1313.793103448276"/>
+            <point key="canvasLocation" x="2982" y="-1343"/>
         </scene>
         <!--Hoofdmenu View Controller-->
         <scene sceneID="cDP-8G-bJ5">
             <objects>
-                <viewController id="K8s-PV-joo" customClass="HoofdmenuViewController" customModule="Tafel_Taferelen" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="topMenu" useStoryboardIdentifierAsRestorationIdentifier="YES" id="K8s-PV-joo" customClass="HoofdmenuViewController" customModule="Tafel_Taferelen" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="unu-CZ-TBD"/>
                         <viewControllerLayoutGuide type="bottom" id="pg8-En-421"/>
@@ -532,7 +532,7 @@
                                     <attributedString key="attributedTitle"/>
                                 </state>
                                 <connections>
-                                    <segue destination="775-ON-1wk" kind="show" id="OxY-T8-ZAh"/>
+                                    <segue destination="775-ON-1wk" kind="show" id="jr8-3y-w7w"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oaM-HD-rud">
@@ -593,7 +593,7 @@
                                     </attributedString>
                                 </state>
                                 <connections>
-                                    <segue destination="775-ON-1wk" kind="showDetail" id="mCS-V7-l7K"/>
+                                    <segue destination="775-ON-1wk" kind="show" id="2ru-Bp-7Pl"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -655,7 +655,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="74"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Trm-bS-Sg6" id="KaK-Z0-x1M">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="73"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="74"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jiv-RD-P87">
@@ -760,7 +760,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TlZ-1y-o3U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2284" y="278"/>
+            <point key="canvasLocation" x="2982" y="254"/>
         </scene>
         <!--Dinner Info View Controller-->
         <scene sceneID="tg0-bJ-sai">
@@ -775,7 +775,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Schermafbeelding 2017-01-19 om 20.02.42" translatesAutoresizingMaskIntoConstraints="NO" id="JDt-oQ-TKu">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="-20" width="375" height="687"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xPP-Sv-Npu">
@@ -871,7 +871,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oWA-Nw-IAJ" id="ETt-RT-l6S">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fm-X0-N7B">
@@ -957,7 +957,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uXY-4O-3ZN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2946" y="-585"/>
+            <point key="canvasLocation" x="2981.5999999999999" y="-585.1574212893554"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="eV6-Aj-mW5">
@@ -1027,7 +1027,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bs3-xa-FtW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1101.5999999999999" y="259.52023988005999"/>
+            <point key="canvasLocation" x="1972" y="255"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="7WZ-EQ-em7">
@@ -1045,7 +1045,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wwu-2l-u63" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-564" y="-815"/>
+            <point key="canvasLocation" x="-604" y="-585"/>
         </scene>
     </scenes>
     <resources>
@@ -1060,6 +1060,6 @@
     <inferredMetricsTieBreakers>
         <segue reference="p6O-GL-Bj7"/>
         <segue reference="3T1-AF-XNm"/>
-        <segue reference="OxY-T8-ZAh"/>
+        <segue reference="jr8-3y-w7w"/>
     </inferredMetricsTieBreakers>
 </document>
